updated index file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Winter Scarves</title>
+  <title>Florida Energy Systems Consortium</title>
   <meta charset="utf-8">
 </head>
 
@@ -17,7 +17,8 @@
 
   <main>
     <section id="banner-message">
-      <img src="images/banner-image.jpg" alt="Florida Energy Summit Image">
+      <p>Please join us at the Florida Energy Submit</p>
+      <p>Oct. 18-20, 2017 in Fort Lauderdale</p>
     </section>
     <aside id="partner-universities">
       <h3>Partner Universities</h3>
