added Facebook Share link and OG metas

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <title>Florida Energy Systems Consortium</title>
   <meta charset="utf-8">
+  <meta property="og:url"           content="https://james1992.github.io/html300-fesc/" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="Florida Energy Systems Consortium" />
+  <meta property="og:description"   content="The Florida Energy Systems Consortium (FESC) was created by the Florida State government to promote collaboration among the energy experts at its 12 supported universities to share energy-related expertise. The consortium assists the state in the development and implementation of an environmentally compatible, sustainable, and efficient energy strategic plan." />
+  <meta property="og:image"         content="https://james1992.github.io/html300-fesc/images/header.png" />
 </head>
 
 <body>
@@ -29,6 +34,22 @@
       <h1>Florida Energy Systems Consortium</h1>
 
     </section>
+    <footer>
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
+        <!-- Your share button code -->
+        <div class="fb-share-button" 
+          data-href="https://james1992.github.io/html300-fesc/" 
+          data-layout="button_count">
+        </div>
+    </footer>
   </main>
 </body>
 </html>
