--- a/index.html
+++ b/index.html
@@ -35,20 +35,16 @@
 
     </section>
     <footer>
-        <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
+      <div id="fb-root"></div>
+      <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
 
-        <!-- Your share button code -->
-        <div class="fb-share-button" 
-          data-href="https://james1992.github.io/html300-fesc/" 
-          data-layout="button_count">
-        </div>
+      <div class="fb-share-button" data-href="https://james1992.github.io/html300-fesc/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fjames1992.github.io%2Fhtml300-fesc%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
     </footer>
   </main>
 </body>
