Tried new image in FB Share

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Florida Energy Systems Consortium" />
   <meta property="og:description"   content="The Florida Energy Systems Consortium (FESC) was created by the Florida State government to promote collaboration among the energy experts at its 12 supported universities to share energy-related expertise. The consortium assists the state in the development and implementation of an environmentally compatible, sustainable, and efficient energy strategic plan." />
-  <meta property="og:image"         content="https://drive.google.com/open?id=1lfFuZ2Luuw7UrD1bHkidhUbCCf9eNUmj" />
+  <meta property="og:image"         content="https://icdn2.digitaltrends.com/image/renewable-energy-2-720x720.jpg?ver=1.jpg" />
 </head>
 
 <body>
