added SASS files to directory and worked on homepage styling template

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta property="og:title"         content="Florida Energy Systems Consortium" />
   <meta property="og:description"   content="The Florida Energy Systems Consortium (FESC) was created by the Florida State government to promote collaboration among the energy experts at its 12 supported universities to share energy-related expertise. The consortium assists the state in the development and implementation of an environmentally compatible, sustainable, and efficient energy strategic plan." />
   <meta property="og:image"         content="https://icdn2.digitaltrends.com/image/renewable-energy-2-720x720.jpg?ver=1.jpg" />
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
@@ -16,15 +19,17 @@
   <header>
     <a href="index.html">Florida Energy Systems Consortium</a>
     <!-- Each main nav element should have pull down menus to remove the side navs on the current site -->
-    <div id="callToAction">
-      <p>Signup for our Newsletter!</p> 
+    <div id="right">
+      <div id="callToAction">
+        <button>Signup for our Newsletter!</button> 
+      </div>
+      <i class="fas fa-bars"></i>
     </div>
-    <i class="fas fa-bars"></i>
   </header>
 
   <main>
-    <!-- Move image to background -->
-    <img src="images/homepage-image.jpg" alt="image of ocean windmills">
+    <!-- Move image to background 
+    <img src="images/homepage-image.jpg" alt="image of ocean windmills" class="background-image"> -->
     <div id="title">
       <h1>Florida Energy Systems Consortium</h1>
       <h5>Universities Addressing Florida's Energy Needs</h5>
@@ -37,10 +42,10 @@
       <a href="about.html">About FESC</a>
     </div>
     <!-- Roughly 5% of the page -->
-    <footer>
-      <p id="copyright">Copyright © 2008-2015 Florida Energy Systems Consortium. | Contact Us</p>
-      <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fjames1992.github.io%2Fhtml300-fesc%2F&layout=button_count&size=large&mobile_iframe=true&width=84&height=28&appId" width="84" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-    </footer>
   </main>
+  <footer>
+    <p id="copyright">Copyright © 2008-2015 Florida Energy Systems Consortium. | Contact Us</p>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fjames1992.github.io%2Fhtml300-fesc%2F&layout=button_count&size=large&mobile_iframe=true&width=84&height=28&appId" width="84" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+  </footer>
 </body>
 </html>
