styled homepage PC display and started to work on the overlay menu

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <!-- Each main nav element should have pull down menus to remove the side navs on the current site -->
     <div id="right">
       <div id="callToAction">
-        <button>Signup for our Newsletter!</button> 
+        <a href="#">Signup for our Newsletter!</a> 
       </div>
-      <i class="fas fa-bars"></i>
+      <a href="#" class="fas fa-bars fa-2x"></a>
     </div>
   </header>
 
@@ -44,8 +44,9 @@
     <!-- Roughly 5% of the page -->
   </main>
   <footer>
-    <p id="copyright">Copyright © 2008-2015 Florida Energy Systems Consortium. | Contact Us</p>
+    <p id="copyright">Copyright © 2008-2015 Florida Energy Systems Consortium. | <a href="#">Contact Us</a></p>
     <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fjames1992.github.io%2Fhtml300-fesc%2F&layout=button_count&size=large&mobile_iframe=true&width=84&height=28&appId" width="84" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
   </footer>
+  <div id="overlay"></div>
 </body>
 </html>
