--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 </head>
 
 <body>
-  <!-- Roughly 5% of the page -->
   <header id="main-header">
-    <a href="index.html">Florida Energy Systems Consortium</a>
-    <!-- Each main nav element should have pull down menus to remove the side navs on the current site -->
+    <a href="index.html" id="name">Florida Energy Systems Consortium</a>
     <div id="right">
       <div id="callToAction">
         <a href="#">Signup for our Newsletter!</a> 
@@ -28,20 +26,17 @@
   </header>
 
   <main id="homepage">
-    <!-- Move image to background 
-    <img src="images/homepage-image.jpg" alt="image of ocean windmills" class="background-image"> -->
     <div id="title">
       <h1>Florida Energy Systems Consortium</h1>
       <h5>Universities Addressing Florida's Energy Needs</h5>
     </div>
     <div id="menu">
-      <a href="#">Education</a>
-      <a href="#">Energy Industry</a>
-      <a href="outreach.html">Outreach</a>
-      <a href="#">Research</a>
-      <a href="about.html">About FESC</a>
+      <a href="#" onmouseover="educationImage('homepage-education')">Education</a>
+      <a href="#" onmouseover="educationImage('homepage-industry')">Energy Industry</a>
+      <a href="outreach.html" onmouseover="educationImage('homepage-outreach')">Outreach</a>
+      <a href="#" onmouseover="educationImage('homepage-research')">Research</a>
+      <a href="about.html" onmouseover="educationImage('homepage-about')">About FESC</a>
     </div>
-    <!-- Roughly 5% of the page -->
   </main>
   <footer id="main-footer">
     <p id="copyright">Copyright © 2008-2015 Florida Energy Systems Consortium. | <a href="#">Contact Us</a></p>
@@ -49,7 +44,6 @@
   <div id="overlay">
     <header id="menu-header">
       <a href="index.html">Florida Energy Systems Consortium</a>
-      <!-- Each main nav element should have pull down menus to remove the side navs on the current site -->
       <i class="fas fa-times fa-2x" onclick="menuOff()"></i>
     </header>
     <main id="menu-main">
@@ -60,7 +54,7 @@
       <a href="#">Research</a>
       <a href="about.html">About FESC</a>
     </main>
-    <footer>
+    <footer id="menu-footer">
       <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fjames1992.github.io%2Fhtml300-fesc%2F&layout=button_count&size=large&mobile_iframe=true&width=84&height=28&appId" width="84" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
   </footer>
   </div>
