added favicon and mobile media queries to homepage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Florida Energy Systems Consortium</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta property="og:url"           content="https://james1992.github.io/html300-fesc/" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Florida Energy Systems Consortium" />
@@ -12,14 +13,15 @@
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 
 <body>
   <header id="main-header">
     <a href="index.html" id="name">Florida Energy Systems Consortium</a>
     <div id="right">
-      <div id="callToAction">
-        <a href="#">Signup for our Newsletter!</a> 
+      <div class="callToAction">
+        <a href="#">Subscribe to our Newsletter!</a> 
       </div>
       <i class="fas fa-bars fa-2x" onclick="menuOn()"></i>
     </div>
@@ -53,6 +55,7 @@
       <a href="outreach.html">Outreach</a>
       <a href="#">Research</a>
       <a href="about.html">About FESC</a>
+      <a href="#">Subscribe to our Newsletter!</a>
     </main>
     <footer id="menu-footer">
       <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fjames1992.github.io%2Fhtml300-fesc%2F&layout=button_count&size=large&mobile_iframe=true&width=84&height=28&appId" width="84" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
