--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a href="index.html">Florida Energy Systems Consortium</a>
       <i class="fas fa-times fa-2x" onclick="menuOff()"></i>
     </header>
-    <main id="menu-main">
+    <div id="menu-main">
       <a href="index.html">Home</a>
       <a href="#">Education</a>
       <a href="#">Energy Industry</a>
@@ -56,10 +56,10 @@
       <a href="#">Research</a>
       <a href="about.html">About FESC</a>
       <a href="#">Subscribe to our Newsletter!</a>
-    </main>
+    </div>
     <footer id="menu-footer">
       <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fjames1992.github.io%2Fhtml300-fesc%2F&layout=button_count&size=large&mobile_iframe=true&width=84&height=28&appId" width="84" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-  </footer>
+    </footer>
   </div>
   <script src="js/script.js"></script>
 </body>
