Setup desktop CSS for second and thrid pages of the site and added campus images to the working directory

--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
   </header>
 
   <main>
-    <section>
-      <div class="content-area">
+    <section class="content-area">
+      <div class="content">
         <h1>About Us</h1>
 
         <p>FESC’s leadership team and organizational structure assure that truly leading edge research and development of critical importance to the Florida and national economies are developed, world-class students in multiple disciplines of energy are trained, and industry reaps the full benefits of the Consortium’s activities. The Leadership Team of FESC is comprised of highly experienced, highly successful innovators from the various energy related research fields, education, outreach, industrial collaboration, technology commercialization, and economic development. The FESC Director, Dr. Jennifer Curtis, is accountable for all mission activities of the Consortium and is assisted in his efforts by a Steering Committee, and Associate Directors in Industrial Collaboration & Commercialization, Education & Outreach, and Program Development.</p>
@@ -47,23 +47,23 @@
         </ul>
       </div>
       <!-- Copy formatting from Advisory Board and Partner University pages.  Just with less images (at most two rows) -->
-      <div class="content-area">
-        <h1>Partner Universities</h1>
-
-        <a href="http://www.ufl.edu/">UF</a>
-        <a href="http://www.fsu.edu/">FSU</a>
-        <a href="https://www.ucf.edu/">UCF</a>
-        
-        <a href="partner-universities.html">See All Partner Universities</a>
+      <div class="content">
+        <h2>Partner Universities</h2>
+        <a href="partner-universities.html"><i class="fas fa-arrow-circle-right fa-2x"></i></a>
+        <div class="gallery">
+          <a href="http://www.ufl.edu/"><img src="images/UF-campus.jpg"></a>
+          <a href="http://www.fsu.edu/"><img src="images/FSU-campus.jpg"></a>
+          <a href="https://www.ucf.edu/"><img src="images/UCF-campus.jpg"></a>
+        </div>
       </div>
-      <div class="content-area">
-        <h1>Advisory Board</h1>
-
-        <img src="images/advisory-board/J-L-Martinez.jpg" alt="J.L. Martinez">
-        <img src="images/advisory-board/Ben-Amaba.jpg" alt="Ben Amaba">
-        <img src="images/advisory-board/Tommy-Boroughs.jpg" alt="Tommy Boroughs">
-        
-        <a href="advisory-board.html">See All Members</a>
+      <div class="content">
+        <h2>Advisory Board</h2>
+        <a href="#"><i class="fas fa-arrow-circle-right fa-2x"></i></a>
+        <div class="gallery">
+          <a href="http://floridaenergy.ufl.edu/about/advisory-board/"><img src="images/advisory-board/J-L-Martinez.jpg" alt="J.L. Martinez"></a>
+          <a href="http://floridaenergy.ufl.edu/about/advisory-board/"><img src="images/advisory-board/Ben-Amaba.jpg" alt="Ben Amaba"></a>
+          <a href="http://floridaenergy.ufl.edu/about/advisory-board/"><img src="images/advisory-board/Tommy-Boroughs.jpg" alt="Tommy Boroughs"></a>
+        </div>
       </div>
     </section>
   </main>
@@ -79,7 +79,7 @@
       <a href="index.html">Home</a>
       <a href="#">Education</a>
       <a href="#">Energy Industry</a>
-      <a href="outreach.html">Outreach</a>
+      <a href="#">Outreach</a>s
       <a href="#">Research</a>
       <a href="about.html">About FESC</a>
       <a href="#">Subscribe to our Newsletter!</a>
