--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a href="index.html">Home</a>
       <a href="#">Education</a>
       <a href="#">Energy Industry</a>
-      <a href="outreach.html">Outreach</a>
+      <a href="#">Outreach</a>
       <a href="#">Research</a>
       <a href="about.html">About FESC</a>
       <a href="#">Subscribe to our Newsletter!</a>
