--- a/partner-universities.html
+++ b/partner-universities.html
@@ -29,21 +29,23 @@
 
   <main>
     <!--  Format college links to use campus photos with name over top, on click goes to website -->
-    <section id="universities">
-      <h1>Partner Universities</h1>
-      <div id="university-logos">
-        <a href="http://www.ufl.edu/">UF</a>
-        <a href="http://www.fsu.edu/">FSU</a>
-        <a href="https://www.ucf.edu/">UCF</a>
-        <a href="http://www.usf.edu/">USF</a>
-        <a href="http://www.famu.edu/">FAMU</a>
-        <a href="http://www.fau.edu/">FAU</a>
-        <a href="https://www.fgcu.edu/">FGCU</a>
-        <a href="https://www.fiu.edu/">FIU</a>
-        <a href="https://www.ncf.edu/">NCF</a>
-        <a href="http://www.unf.edu/">UNF</a>
-        <a href="http://uwf.edu/">UWF</a>
-        <a href="https://floridapoly.edu/">Florida Polytechnic</a>
+    <section class="content-area">
+      <div class="content">
+        <h1>Partner Universities</h1>
+        <div class="gallery">
+          <a href="http://www.ufl.edu/"><img src="images/UF-campus.jpg"></a>
+          <a href="http://www.fsu.edu/"><img src="images/FSU-campus.jpg"></a>
+          <a href="https://www.ucf.edu/"><img src="images/UCF-campus.jpg"></a>
+          <a href="http://www.usf.edu/"><img src="images/USF-campus.jpg"></a>
+          <a href="http://www.famu.edu/"><img src="images/FAMU-campus.jpg"></a>
+          <a href="http://www.fau.edu/"><img src="images/FAU-campus.jpg"></a>
+          <a href="https://www.fgcu.edu/"><img src="images/FGCU-campus.jpg"></a>
+          <a href="https://www.fiu.edu/"><img src="images/FIU-campus.jpg"></a>
+          <a href="https://www.ncf.edu/"><img src="images/NCF-campus.jpg"></a>
+          <a href="http://www.unf.edu/"><img src="images/UNF-campus.jpg"></a>
+          <a href="http://uwf.edu/"><img src="images/UWF-campus.jpg"></a>
+          <a href="https://floridapoly.edu/"><img src="images/Florida-Poly-campus.jpg"></a>
+        </div>
       </div>
     </section>
   </main>
@@ -60,7 +62,7 @@
       <a href="index.html">Home</a>
       <a href="#">Education</a>
       <a href="#">Energy Industry</a>
-      <a href="outreach.html">Outreach</a>
+      <a href="#">Outreach</a>
       <a href="#">Research</a>
       <a href="about.html">About FESC</a>
       <a href="#">Subscribe to our Newsletter!</a>
