Moved Google Charts JS into its own file to fix JS console log errors on other pages that do not use the charts

--- a/outreach.html
+++ b/outreach.html
@@ -71,5 +71,6 @@
   </div>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/chart.js"></script>
 </body>
 </html>
