Added Vue.js components for the header and footer on each html page.  Updated the CSS IDs to Classes for the headers and footers

--- a/index.html
+++ b/index.html
@@ -17,15 +17,9 @@
 </head>
 
 <body>
-  <header id="main-header">
-    <a href="index.html" id="name">Florida Energy Systems Consortium</a>
-    <div id="right">
-      <div class="callToAction">
-        <a href="#">Subscribe to our Newsletter!</a> 
-      </div>
-      <i class="fas fa-bars fa-2x" onclick="menuOn()"></i>
-    </div>
-  </header>
+    <header class="main-header" id="header-component">
+        <heading></heading>
+    </header>
 
   <main id="homepage">
     <div id="title">
@@ -40,8 +34,8 @@
       <a href="about.html" onmouseover="educationImage('homepage-about')">About FESC</a>
     </div>
   </main>
-  <footer id="main-footer">
-    <p id="copyright">Copyright © 2008-2015 Florida Energy Systems Consortium. | <a href="#">Contact Us</a></p>
+  <footer class="main-footer" id="footer-component">
+    <footing></footing>
   </footer>
   <div id="overlay">
     <header id="menu-header">
@@ -62,5 +56,8 @@
     </footer>
   </div>
   <script src="js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/vue/1.0.16/vue.js"></script>
+  <script src="js/header-component.js"></script>
+  <script src="js/footer-component.js"></script>
 </body>
 </html>
