--- a/partner-universities.html
+++ b/partner-universities.html
@@ -17,15 +17,9 @@
 
 <body>
   <!-- Roughly 5-10% of the page -->
-  <header id="main-header">
-    <a href="index.html" id="name">Florida Energy Systems Consortium</a>
-    <div id="right">
-      <div class="callToAction">
-        <a href="#">Subscribe to our Newsletter!</a> 
-      </div>
-      <i class="fas fa-bars fa-2x" onclick="menuOn()"></i>
-    </div>
-  </header>
+    <header class="main-header" id="header-component">
+        <heading></heading>
+    </header>
 
   <main>
     <!--  Format college links to use campus photos with name over top, on click goes to website -->
@@ -50,8 +44,8 @@
     </section>
   </main>
     <!-- Roughly 5-10% of the page -->
-  <footer id="main-footer">
-    <p id="copyright">Copyright © 2008-2015 Florida Energy Systems Consortium. | Contact Us</p>
+  <footer class="main-footer" id="footer-component">
+    <footing></footing>
   </footer>
   <div id="overlay">
     <header id="menu-header">
@@ -72,5 +66,8 @@
     </footer>
   </div>
   <script src="js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/vue/1.0.16/vue.js"></script>
+  <script src="js/header-component.js"></script>
+  <script src="js/footer-component.js"></script>
 </body>
 </html>
