refactored chart.js to accept energy data directly from API.  Had to simplify charts to submit assignment on time

--- a/outreach.html
+++ b/outreach.html
@@ -36,8 +36,8 @@
       <!-- Implement carousel to rotate through subjects -->
       <div class="content">
         <h2>Florida Energy Usage Quick Facts</h2>
-        <div id="chart_div" style="width: 1000px; height: 500px;"></div>
-        <div id="line_div" style="width: 1000px; height: 500px;"></div>
+        <div id="consumption_div" style="width: 1000px; height: 500px;"></div>
+        <div id="production_div" style="width: 1000px; height: 500px;"></div>
       </div>
     </section>
   </main>
